--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Tuan Nguyen Vinh <tuannv562@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.62.0"
-pydantic = "^1.7.3"
+pydantic = {extras = ["dotenv"], version = "^1.7.3"}
 alembic = "^1.4.3"
 SQLAlchemy = "^1.3.20"
 
