--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ SQLAlchemy = "^1.3.20"
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
 black = "^20.8b1"
+rope = "^0.18.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
