--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ fastapi = "^0.62.0"
 pydantic = {extras = ["dotenv"], version = "^1.7.3"}
 alembic = "^1.4.3"
 SQLAlchemy = "^1.3.20"
+psycopg2 = "^2.8.6"
+uvicorn = {extras = ["standard"], version = "^0.13.3"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
