--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,28 @@ services:
       - "5432:5432"
     env_file:
       - .env
-    volumes:
-      - hello_fastapi:/var/lib/postgresql/data
     networks:
-      hello_fastapi:
-        ipv4_address: 172.21.0.2
+      - postgres
+    volumes:
+      - postgres:/var/lib/postgresql/data
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    depends_on:
+      - postgres
+    env_file:
+      - .env
+    volumes:
+      - pgadmin:/root/.pgadmin
+    ports:
+      - "53603:53603"
+      - "5050:80"
+    networks:
+      - postgres
+    restart: unless-stopped
 networks:
-  hello_fastapi:
+  postgres:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.21.0.0/16
 volumes:
-  hello_fastapi:
+  postgres:
+  pgadmin:
