--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ authors = ["Tuan Nguyen Vinh <tuannv562@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.62.0"
-pydantic = {extras = ["dotenv"], version = "^1.7.3"}
+pydantic = {extras = ["email"], version = "^1.7.3"}
 alembic = "^1.4.3"
 SQLAlchemy = "^1.3.20"
 psycopg2 = "^2.8.6"
 uvicorn = {extras = ["standard"], version = "^0.13.3"}
+passlib = "^1.7.4"
+python-jose = "^3.2.0"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
