--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   postgres:
     container_name: postgres
-    image: "postgres"
+    image: "postgres:13.1"
     ports:
       - "5432:5432"
     env_file:
